RESOLVED FIXED167947
REGRESSION (r211819): [ios-simulator] API tests Coding.WKWebView and Coding.WKWebView_SameConfiguration crashing
https://bugs.webkit.org/show_bug.cgi?id=167947
Summary REGRESSION (r211819): [ios-simulator] API tests Coding.WKWebView and Coding.W...
Ryan Haddad
Reported 2017-02-07 11:37:04 PST
Created attachment 300827 [details] Crash log [ios-simulator] API tests Coding.WKWebView and Coding.WKWebView_SameConfiguration crashing Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebKit 0x0000000102c0f64a WebKit::WebPageProxy::setDrawsBackground(bool) + 0 (WebPageProxy.cpp:1372) 1 com.apple.UIKit 0x000000010695db98 -[UIView initWithCoder:] + 1213 2 com.apple.WebKit 0x0000000102d08243 -[WKWebView initWithCoder:] + 51 (WKWebView.mm:603) 3 com.apple.Foundation 0x000000010837ff12 _decodeObjectBinary + 2622 4 com.apple.Foundation 0x000000010837f3c6 _decodeObject + 249 5 com.apple.Foundation 0x000000010837e381 +[NSKeyedUnarchiver unarchiveObjectWithData:] + 84 6 TestWebKitAPI 0x0000000101a047f8 WTF::RetainPtr<WKWebView> encodeAndDecode<WKWebView>(WKWebView*) + 60 (Coding.mm:38) 7 TestWebKitAPI 0x0000000101a0442d Coding_WKWebView_Test::TestBody() + 129 (Coding.mm:144) 8 TestWebKitAPI 0x0000000101b490c8 testing::Test::Run() + 92 9 TestWebKitAPI 0x0000000101b49894 testing::internal::TestInfoImpl::Run() + 178 10 TestWebKitAPI 0x0000000101b49c88 testing::TestCase::Run() + 188 11 TestWebKitAPI 0x0000000101b4d16d testing::internal::UnitTestImpl::RunAllTests() + 583 12 TestWebKitAPI 0x0000000101acc17b TestWebKitAPI::TestsController::run(int, char**) + 131 (TestsController.cpp:80) 13 TestWebKitAPI 0x0000000101b25cc1 main + 116 (mainIOS.mm:34) 14 libdyld.dylib 0x000000010986968d start + 1
Attachments
Crash log (43.69 KB, text/plain)
2017-02-07 11:37 PST, Ryan Haddad
no flags
Patch (3.23 KB, patch)
2017-02-07 13:41 PST, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 2 2017-02-07 13:41:26 PST
Anders Carlsson
Comment 3 2017-02-07 14:10:36 PST
Note You need to log in before you can comment on or make changes to this bug.