REGRESSION (r211819): [ios-simulator] API tests Coding.WKWebView and Coding.WKWebView_SameConfiguration crashing https://bugs.webkit.org/show_bug.cgi?id=167947

Reviewed by Tim Horton.

* Platform/spi/ios/UIKitSPI.h:
Add SPI declaration.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _initializeWithConfiguration:]):
Make sure to call setDrawsBackground here.

(-[WKWebView _populateArchivedSubviews:]):
We don't want to archive the scroll view and the fixed overlay view.

(-[WKWebView setOpaque:]):
Return early if this is called before we have a page (like from -[UIView initWithCoder:]).

Canonical link: https://commits.webkit.org/184987@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211838 268f45cc-cd09-0410-ab3c-d52691b4dbfc